# EcoMotionZip

./: .gitignore  Compression_Performance_analysis copy.ipynb  Compression_Performance_analysis.ipynb  LICENSE  README.md  TT_raw_RPi5-server.csv  Test_Dataset_Analysis.ipynb  config.json  main.py  pi_cpu_record.sh  requirements.txt  result_evaluation copy.ipynb  result_evaluation-mac.ipynb  result_evaluation.ipynb  rpi_tests.py  run.bash  setup.cfg  setup.py  supp_materials.ipynb  test_scripts.ipynb  transfer.py  transfer_times.csv  transfer_times_RPi5.csv  video_transfer.py
EcoMotionZip/: app.py  app_cam.py  app_cam_rpi.py  convert.sh
EcoMotionZip/sandpit/: app.py  test_scripts.ipynb
EcoMotionZip/video_1A/: video_1A_video_info.csv
Experiments/: File_Rename_Info.csv
Experiments/EnergyTests/: Formatting_templete.xlsx
Experiments/EnergyTests/Combined_Data/: JN_JamesCook.csv  JN_Naqvi2022.csv  JN_PICT.csv  JN_Ratnayake2021.csv  JN_Ratnayake2023.csv  JN_vanderVoort2022.csv  RPi4_JamesCook.csv  RPi4_PICT.csv  (+10 more)
Experiments/Test_Dataset_BG_Changes/: Naqvi2022.csv  NestMonitoring.csv  PICT.csv  Ratnayake2021.csv  vanderVoort2022.csv
Experiments/Video_Observations/: Processed_observations.xlsx  manual_obs.xlsx  manual_obs_csv.csv  manual_obs_latex.csv
Other/: cpu_record_2023-12-14_11-31-55.csv  cpu_temps.csv  result_evaluation-mac.ipynb  rpi_tests.py  rpi_tests_reps.py
docs/: RaspberryPi_installation.md
misc/: energy_evaluation.ipynb  result_evaluation.ipynb  supp_materials.ipynb  video_transfer.py
src/: EcoMotionZip.py  EcoMotionZip_lite.py  app.py  main.py
(+74 files in other folders)
