# FILEPATH: /Users/mrat0010/Documents/GitHub/EcoMotionZip/setup.cfg

[metadata]
name = EcoMotionZip
version = 1.0.0
author = Malika Nisal Ratnayake
author_email = your_email@example.com
description = Your package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/your_package
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    package1
    package2
    package3

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    your_script_name = your_package.module:main
